# cryptography_benchmark_flutter

./: .gitignore  README.md  pubspec.yaml
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/cryptography_benchmark_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/benchmark/: benchmark_service.dart
lib/crypto/: common.dart  dart_impl.dart  ffi_impl.dart  pc_impl.dart
native_crypto/: CMakeLists.txt
native_crypto/include/: native_crypto.h
native_crypto/src/: crypto.c
plots/: 1_RAM_usage_plots.py  1_benchmark_g2_mini.csv  1_benchmark_pixel.csv  1_benchmark_s10.csv  1_crypt_decrypt_comparison_plot.py  1_get_table_data.py  1_multiple_devices_comparison_plots.py  1_one_device_plots.py  1_performance_increase_comparison_multiplot.py
